changed it to prevent image squishing on display of uploaded image

--- a/frontend/outfitcreator/src/Components/Upload_Page/Upload.css
+++ b/frontend/outfitcreator/src/Components/Upload_Page/Upload.css
@@ -34,7 +34,7 @@
 
 .upload--image {
     border: 4px solid var(--dark-purple);
-    height: 200px;
+    min-height: 200px;
     margin-bottom: 30px;
     min-width: 300px;
     width: 30vw;
